update readme add trusted issuer endpoints
